clusters/main/kubernetes/flux-system/notifications/ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
      cert-manager.io/cluster-issuer: cloudflared
      cert-manager.io/private-key-rotation-policy: Always
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.tls: "true"
      traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: flux-webhook.${DOMAIN_0}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
    - hosts:
      - flux-webhook.${DOMAIN_0}
      secretName: flux-webhook-tls-0
status:
    loadBalancer:
      ingress:
      - ip: ${TRAEFIK_IP}
